# nonebot-plugin-AIchat

./: LICENSE  README.md  pyproject.toml
nonebot_plugin_AIchat/: __init__.py  config.py  hunyuan.py  main.py  qwin.py
nonebot_plugin_groups_aichat/: __init__.py  config.py
